# openai-agents

./: README.md  pyproject.toml
chainlit_chatbot/hello_agent/: .env  README.md  chatbot.py  handoffs.py  pyproject.toml  stream.py  streaming.py  tools.py
chainlit_chatbot/hello_agent/example/: pyproject.toml
chainlit_chatbot/hello_agent/example/src/example/: __init__.py
chainlit_chatbot/hello_agent/handoffs/: pyproject.toml
chainlit_chatbot/hello_agent/streaming/: pyproject.toml
chainlit_chatbot/hello_agent/tools/: pyproject.toml
context/: README.md  hello.py  main.py
guardrails/: README.md  main.py  pyproject.toml
handoffs/: README.md  main.py  pyproject.toml
hello_agent/: pyproject.toml
streaming/: README.md  main.py  pyproject.toml
tools/: README.md  main.py  pyproject.toml
