[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sadiqali12", email = "sadiqalinizamani32@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
example = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
