[project]
name = "streaming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "sadiqali12", email = "sadiqalinizamani32@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
streaming = "streaming:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
