[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "", email = "" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
example = "example:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
